typescript module builds and used by my-react-app correctly

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,6 +14,12 @@
             "script": "start",
             "path": "packages/my-react-app/",
             "problemMatcher": []
+        },
+        {
+            "type": "npm",
+            "script": "build",
+            "path": "packages/my-ts-module1/",
+            "problemMatcher": []
         }
     ]
 }
