--- a/packages/my-react-app/package.json
+++ b/packages/my-react-app/package.json
@@ -7,7 +7,8 @@
     "react-dom": "^16.5.2",
     "react-scripts": "1.1.5",
     "my-module1":"*",
-    "my-module2":"*"
+    "my-module2":"*",
+    "my-ts-module1":"*"
   },
   "scripts": {
     "start": "react-scripts start",
